CW_rugby/rugby_q22650aj/fback.txt
Submission ran but did not finish its execution due to the errors below. 
This does not mean the program did not execute however, it may or may not have produced some files or none: 

   File "***Removed due to privacy***/rugby_q22650aj/./rugby_q22650aj.py", line 7
    files = os.listdir(folders[0]))
                                  ^
SyntaxError: unmatched ')'

No files were created within the results folder. (This does not mean files were not created elsewhere)
